# c-ray

./: .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  animate.py  asan  build-clang  build-debug  build-gcc  build-ubsan  ccache.mk  clang  cosmo.mk  count-lines  dbg  gcc  ideas.txt  lib.mk  makefile  rls  run-tests.sh  ubsan
.githooks/: post-commit
.github/: FUNDING.yml
.github/workflows/: c.yml
C-Ray/: CRay.c  CRay.h  camera.c  camera.h  errorhandler.c  errorhandler.h  filehandler.c  filehandler.h  includes.h  modeler.c  modeler.h  poly.c  poly.h  scene.c  scene.h  sphere.c  vector.c
C-Ray.xcodeproj/: project.pbxproj
C-Ray.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
C-Ray.xcodeproj/xcshareddata/xcschemes/: C-Ray Debug.xcscheme  C-Ray Fast copy.xcscheme  C-Ray Fast.xcscheme
C-Ray/C-Ray/: display.c  display.h
CRayWindows/: CRayWindows.sln  CRayWindows.vcxproj  CRayWindows.vcxproj.filters
bindings/: blender_init.py  blender_ui.py  c_ray.py  cray_wrap.c
bindings/nodes/: color.py  convert.py  node.py  shader.py  value.py  vector.py
bindings/python/: cray_wrap.c  py_types.c  py_types.h
bindings/python/lib/: c_ray.py
cmake/: set_up_ccache.cmake
include/: v.h
include/c-ray/: c-ray.h  node.h
input/: alphanode.json  animate.json  bsdf_test.json  bsdf_test1.json  bsdf_test2.json  clio_sport.json  fence.json  ghandi.mtl  girl.mtl  glowmetal.json  hdr.json  hex.json  newScene.mtl  plane.mtl  refraction.json  roman_pottery_1.mtl  roman_pottery_2.mtl  scene.json  sceneFile.txt  scenedef.txt  statues.json  teapot_green.mtl  teapot_red.mtl  teapot_white.mtl  tonni.mtl  uvsphere.json  vase_1.mtl  venus.json  venusscaled.mtl
input/HDRs/: roof_garden_1k.hdr  rooitou_park_1k.hdr  studio_small_01_1k.hdr  studio_small_07_1k.hdr
input/shapes/: bsdf_test.json  gridplane.mtl  plane.mtl  rockplane.mtl
integrations/blender/: __init__.py  properties.py  ui.py
models/: model.json  model.tinn
models/examples/: 0.json  0low.json
output/: mainScene.mtl  rendered_0.ppm  scene.txt  sceneFile.txt  teapot_blue.mtl  teapot_test.mtl
rebuild/: asan  debug  gcc  nosdl  release  sdl  testing-off  testing-on  tsan
scripts/: animate.py  blender.py  bundle.py  concat.sh  interactive_debug.sh  makeanim.sh  makerelease.sh  test.py  testnetwork.py
scripts/animations/: hdrseam.json  hdrseam.py  iterate_t.py  offset.py  orbit.py  refract.json  refract.py  rotate.py  sphereplane.py
scripts/scenes/lots_of_instances/: hdr.json  run.py
src/: .editorconfig  CRay.c  CRay.h  bbox.c  bbox.h  c-ray.c  c-ray.h  camera.c  camera.h  clRenderer.c  clRenderer.h  color.c  color.h  converter.c  converter.h  datatypes.h  denoiser.c  display.h  errorhandler.c  errorhandler.h  filehandler.c  filehandler.h  includes.h  kdtree.c  kdtree.h  learn.c  learn.h  light.c  light.h  lightRay.c  lightRay.h  list.c  list.h  lodepng.c  lodepng.h  logging.c  logging.h  logo.c  main.c  main.h  (+36 more)
src/acceleration/: bbox.c  bbox.h  kdtree.c  kdtree.h
src/accelerators/: bbox.c  bbox.h  bvh.c  bvh.h  kdtree.c  kdtree.h
src/api/: c-ray.c  node.c
src/common/: assert.c  base64.c  base64.h  color.c  color.h  cr_assert.c  cr_assert.h  cr_string.c  cr_string.h  dyn_array.h  fileio.c  fileio.h  gitsha1.c.in  gitsha1.h  hashtable.c  hashtable.h  json_loader.c  json_loader.h  linked_list.h  logging.c  logging.h  logo.h  logo_bytes.txt  memory.h  mempool.c  mempool.h  networking.c  networking.h  node_parse.c  quaternion.c  quaternion.h  string.c  string.h  testrunner.c  textbuffer.c  textbuffer.h  texture.c  texture.h  timer.c  timer.h  (+4 more)
src/common/loaders/: meshloader.c  meshloader.h  textureloader.c  textureloader.h
src/common/platform/: capabilities.c  capabilities.h  dyn.c  dyn.h  mutex.c  mutex.h  signal.c  signal.h  terminal.c  terminal.h  thread.c  thread.h  thread_pool.c  thread_pool.h
src/datatypes/: bbox.h  camera.c  camera.h  color.c  color.h  hitrecord.h  instance.c  instance.h  lightRay.c  lightRay.h  lightray.h  mat3.c  mat3.h  material.c  material.h  mesh.c  mesh.h  obj.c  obj.h  poly.c  poly.h  quaternion.c  scene.c  scene.h  sphere.c  sphere.h  spline.c  spline.h  texture.c  texture.h  tile.c  tile.h  transforms.c  transforms.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h  (+4 more)
src/datatypes/image/: hdr.c  hdr.h  imagefile.c  imagefile.h  outputfile.c  outputfile.h  texture.c  texture.h
src/driver/: args.c  args.h  imagefile.h  json_loader.c  main.c  node_parse.c  node_parse.h  sdl.c  sdl.h
src/driver/encoders/: encoder.c  encoder.h
src/driver/loaders/: mesh.c  mesh.h  meshloader.c  (+1 more)
src/libraries/: Tinn.c  asprintf.h  cJSON.c  cJSON.h  list.c  lodepng.c  lodepng.h  obj_parser.c  obj_parser.h  pcg_basic.c  qoi.h  stb_image.h  string_extra.c  string_extra.h
src/nodes/: bsdf.c  bsdf.h  bsdfnode.c  bsdfnode.h  colornode.c  colornode.h  nodebase.c  nodebase.h  valuenode.c  valuenode.h  vectornode.c  vectornode.h
src/renderer/: envmap.c  envmap.h  instance.c  instance.h  pathtrace.c  pathtrace.h  renderer.c  renderer.h  sky.c  sky.h
src/utils/: args.c  args.h  assert.h  base64.c  base64.h  converter.c  converter.h  denoiser.c  denoiser.h  dyn_array.c  dyn_array.h  filecache.c  filecache.h  filehandler.c  filehandler.h  fileio.c  fileio.h  gitsha1.c  gitsha1.c.in  gitsha1.h  hashtable.c  hashtable.h  ioutils.c  learn.c  learn.h  logging.c  logging.h  logo.h  memory.c  memory.h  mempool.c  mempool.h  multiplatform.c  multiplatform.h  networking.c  networking.h  protocol.c  protocol.h  statistics.c  statistics.h  (+10 more)
tests/: runner.sh  test.mk  test_base64.h  test_dyn_array.h  test_fileio.h  test_hashtable.h  test_linked_list.h  test_mempool.h  test_nodes.h  test_parser.h  test_sampler.h  test_serializer.h  test_string.h  test_textbuffer.h  test_thread_pool.h  test_transforms.h  test_vector.h  testrunner.c  testrunner.h  tests.h
tests/perf/: perf_base64.h  perf_fileio.h  perf_texture.h  tests.h
wrappers/: blender_init.py  c_ray.py  cr_renderer.py  cray.c  cray.py  cray_wrap.c  meta.py  test.py
(+290 files in other folders)
